few comments noting changes i would make
velocity, etc., at time t should be recalculated using position .shift(-1) - shift(), but it was not originally. i know this.

--- a/sym_cargo_2023.ipynb
+++ b/sym_cargo_2023.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "a4b1b53a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mshapely\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometry\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Point, LineString\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ff7ef5e5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c9b7693a",
    "metadata": {},
    "outputs": [],
@@ -64,111 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ce12f808",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the shape of the ports dataframe is: (122, 6)\n",
-      "the shape of the tracking dataframe is: (591402, 16)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>port</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>lat_rad</th>\n",
-       "      <th>long_rad</th>\n",
-       "      <th>lat_long</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>42.387051</td>\n",
-       "      <td>-71.057504</td>\n",
-       "      <td>0.739794</td>\n",
-       "      <td>-1.240187</td>\n",
-       "      <td>[42.387051, -71.0575042]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "      <td>22.812330</td>\n",
-       "      <td>120.193849</td>\n",
-       "      <td>0.398150</td>\n",
-       "      <td>2.097778</td>\n",
-       "      <td>[22.8123304, 120.1938488]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>10.200166</td>\n",
-       "      <td>-61.701978</td>\n",
-       "      <td>0.178026</td>\n",
-       "      <td>-1.076903</td>\n",
-       "      <td>[10.2001663, -61.701978]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>36.400000</td>\n",
-       "      <td>126.483333</td>\n",
-       "      <td>0.635300</td>\n",
-       "      <td>2.207551</td>\n",
-       "      <td>[36.4, 126.4833333]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13</td>\n",
-       "      <td>29.897303</td>\n",
-       "      <td>122.089303</td>\n",
-       "      <td>0.521806</td>\n",
-       "      <td>2.130860</td>\n",
-       "      <td>[29.8973026, 122.0893035]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   port        lat        long   lat_rad  long_rad                   lat_long\n",
-       "0     6  42.387051  -71.057504  0.739794 -1.240187   [42.387051, -71.0575042]\n",
-       "1     7  22.812330  120.193849  0.398150  2.097778  [22.8123304, 120.1938488]\n",
-       "2    10  10.200166  -61.701978  0.178026 -1.076903   [10.2001663, -61.701978]\n",
-       "3    11  36.400000  126.483333  0.635300  2.207551        [36.4, 126.4833333]\n",
-       "4    13  29.897303  122.089303  0.521806  2.130860  [29.8973026, 122.0893035]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ports_df, tracking_df = wrangle(port_file=port_file, tracking_file=tracking_file)\n",
     "\n",
@@ -597,14 +508,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculating draft forwards and backwards \n",
+    "# calculating draft forwards and backwards - note all of these values\n",
+    "# should be recalculated using shift(-1) - shift(1) but i was new!\n",
     "\n",
     "tracking_df['draft_raw'] = tracking_df.groupby('vessel')['draft'].transform(lambda x: x.diff())\n",
     "tracking_df['draft_delta_back'] = tracking_df.groupby('vessel')['draft'].transform(lambda x: abs(x.diff()).ge(0.69)).astype(int)\n",
     "tracking_df['draft_delta_ahead'] = tracking_df.groupby('vessel')['draft'].transform(lambda x: abs(x.diff(-1)).ge(0.69)).astype(int)\n",
     "tracking_df['draft_change'] = ((tracking_df['draft_delta_back'] + tracking_df['draft_delta_ahead']) >= 1).astype(int)\n",
     "\n",
-    "# calculating heading change \n",
+    "# calculating heading change. same comment.\n",
     "tracking_df['heading_change'] = tracking_df.groupby('vessel')['heading'].transform(lambda x: abs(x.diff()))\n",
     "tracking_df['heading_change'] = [360 - x if x > 180 else x for x in tracking_df['heading_change']]\n",
     "tracking_df['heading_seq'] = tracking_df.groupby('vessel')['heading'].transform(lambda x: abs(x.diff()).gt(3).cumsum()+1)"
@@ -771,7 +683,7 @@
     "\n",
     "# looking at this several years later, this is data preprocessing on \n",
     "# vessel-specific dataframes. this seems quite hacky, but it did improve \n",
-    "# port identification by allowing me to spot idiosyncratic anomalies.\n",
+    "# port identification by allowing me to spot anomalies.\n",
     "\n",
     "processed_dfs = {}\n",
     "\n",
@@ -925,7 +837,7 @@
     "    \n",
     "    It should be noted that I am training on the  entire on the entire X and y here to maximize the information available\n",
     "    to the model prior to my submission. Originally I validated the method and tuned the parameters using a \n",
-    "    validation set. Of course!! \n",
+    "    validation set. \n",
     "    \n",
     "    When I originally did this xgboost did not require target variables to be ordered from 0 to n-1 (total classes).\n",
     "    I therefore had to include a LabelEncoder in this version.    \n",
